# weft

./: .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  decisions.md  hailey-car-warranty.md  main.py  overview.md  pyproject.toml
.claude/: settings.json
.lw_coder/: .dockerignore  code.Dockerfile  config.toml
.lw_coder/judges/: code-reuse.md
.lw_coder/tasks/: augment_plan_fields.md  claude-cli-default-executor.md  code-command-foundation.md  concise-commit-messages.md  configurable-model-defaults.md  configurable-viewer-hooks.md  dspy-prompt-pipeline.md  fix-subagent-hallucinations.md  implement-dspy-code-command.md  init-command.md  (+24 more)
.weft/: config.toml
docs/: BEST_PRACTICES.md  COMPLETION.md  CONFIGURATION.md  HOOKS.md  THREAT_MODEL.md  code-config.md  configuration.md
scripts/: count_lines.sh  generate_template_version.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_cli.py  test_code_command.py  test_code_prompt_signature.py  test_config_loader.py  test_docker_build.py  test_droid_session.py  test_eval_command.py  test_executors.py  test_finalize_command.py  test_git_in_docker.py  test_home_env.py  test_init_command.py  test_judge_executor_integration.py  test_judge_loader.py  test_judge_orchestrator.py  test_param_validation.py  test_plan_command.py  test_plan_lifecycle.py  test_plan_resolver.py  test_plan_validator.py  test_prompt_loader.py  test_prompt_orchestrator.py  test_sdk_integration.py  test_sdk_network.py  test_trace_capture.py  test_trace_capture_integration.py  test_worktree_utils.py  test_write_sub_agents.py
(+320 files in other folders)
