[project]
name = "lw-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docopt-ng>=0.9.0",
    "dspy-ai>=3.0.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[project.scripts]
lw_coder = "lw_coder.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
