[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lw-coder"
version = "0.1.0"
description = "Self-optimizing multi-agent AI coding assistant"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "argcomplete>=3.0.0",
    "claude-agent-sdk>=0.1.10",
    "dspy-ai>=3.0.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "watchdog>=3.0.0",
]

[project.scripts]
lw_coder = "lw_coder.cli:main"

[tool.setuptools.package-data]
lw_coder = ["droids/**/*.md", "prompts/**/*.md", "sdk_settings.json", "init_templates/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]
